@@ -1,6 +1,6 @@
 Package: xcms
-Version: 1.21.16
-Date: 2010-03-08
+Version: 1.21.17
+Date: 2010-03-12
 Title: LC/MS and GC/MS Data Analysis
 Author: Colin A. Smith <csmith@scripps.edu>, 
         Ralf Tautenhahn <rtautenh@scripps.edu>,
